--- a/packages/rpc-node/package.json
+++ b/packages/rpc-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wexond/rpc-node",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Type-safe communication between message ports from Node.js worker_threads module",
   "main": "build/index.js",
   "typings": "build/index.d.ts",
@@ -19,9 +19,9 @@
     "prepublishOnly": "npm run build:prod"
   },
   "devDependencies": {
-    "@wexond/rpc-core": "^1.0.3"
+    "@wexond/rpc-core": "file:../rpc-core"
   },
   "peerDependencies": {
-    "@wexond/rpc-core": "^1.0.2"
+    "@wexond/rpc-core": "file:../rpc-core"
   }
 }
