--- a/packages/rpc-electron/package.json
+++ b/packages/rpc-electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wexond/rpc-electron",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Type-safe inter-process communication for Electron",
   "keywords": [
     "electron",
@@ -28,11 +28,11 @@
     "test": "mocha -r ts-node/register tests/**/*.ts --timeout 5000"
   },
   "devDependencies": {
-    "@wexond/rpc-core": "^1.0.3",
-    "electron": "^10.1.5"
+    "@wexond/rpc-core": "file:../rpc-core",
+    "electron": "^29.1.1"
   },
   "peerDependencies": {
-    "@wexond/rpc-core": "^1.0.2",
-    "electron": "^10.1.5"
+    "@wexond/rpc-core": "file:../rpc-core",
+    "electron": "^29.1.1"
   }
 }
