--- a/packages/rpc-core/package.json
+++ b/packages/rpc-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wexond/rpc-core",
+  "name": "@ironiumstudios/rpc-core",
   "version": "2.0.6",
   "description": "Core components for type-safe inter-process communication",
   "main": "build/index.js",
