--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "base-rpc"]
-	path = base-rpc
-	url = https://github.com/IroniumStudios/base-rpc
+[submodule "ironiumstudios-rpc"]
+	path = ironiumstudios-rpc
+	url = https://github.com/IroniumStudios/ironiumstudios-rpc
