--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "@types/chai": "^4.3.16",
     "@types/deasync": "^0.1.5",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.14.2",
     "@types/sinon": "^17.0.3",
     "chai": "^5.1.1",
-    "deasync": "^0.1.29",
-    "eslint": "^9.3.0",
+    "deasync": "^0.1.30",
+    "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "lerna": "^8.1.3",
+    "lerna": "8.1.3",
     "mocha": "^10.4.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
     "sinon": "^18.0.0",
     "ts-node": "^10.9.2",
@@ -38,5 +38,5 @@
     "rpc-electron",
     "rpc-node"
   ],
-  "packageManager": "yarn@4.2.2"
+  "packageManager": "yarn@4.3.0"
 }
